# barbershop

./: CMakeLists.txt
src/: main.cpp
